--- a/logout.html
+++ b/logout.html
@@ -1,8 +1,22 @@
 <?php
-// Add the logout logic
-// Clear session and redirect to login page
+// Clear session
 session_start();
 session_unset();
 session_destroy();
-header("Location: login");
-exit;
+?>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Logging out...</title>
+</head>
+<body>
+    <p>Logging out...</p>
+    <script>
+        // Clear token and redirect
+        localStorage.removeItem('ds_token');
+        setTimeout(() => { window.location.href = '/login'; }, 500);
+    </script>
+</body>
+</html>
