--- a/contact.html
+++ b/contact.html
@@ -27,6 +27,53 @@
             });
         });
     </script>
+
+    <script>
+        // LOGIN STATUS CHECK
+        document.addEventListener('DOMContentLoaded', () => {
+            const ME_API = "https://ytjlknmtfwlhqcgszxid.supabase.co/functions/v1/me";
+
+            async function getMe() {
+                const token = localStorage.getItem('ds_token');
+                if (!token) return null;
+                try {
+                    const r = await fetch(ME_API, {
+                        method: 'GET',
+                        headers: { 'Authorization': 'Bearer ' + token }
+                    });
+                    if (!r.ok) return null;
+                    return await r.json();
+                } catch (e) {
+                    console.error('getMe error', e);
+                    return null;
+                }
+            }
+
+            function updateNav() {
+                const token = localStorage.getItem('ds_token');
+                const loginBtns = document.querySelectorAll('.auth-btn.login-btn');
+                const logoutBtns = document.querySelectorAll('.auth-btn.logout-btn');
+                if (token) {
+                    loginBtns.forEach(btn => btn.style.display = 'none');
+                    logoutBtns.forEach(btn => btn.style.display = 'inline-block');
+                } else {
+                    loginBtns.forEach(btn => btn.style.display = 'inline-block');
+                    logoutBtns.forEach(btn => btn.style.display = 'none');
+                }
+            }
+
+            // Check login status on page load
+            (async () => {
+                const user = await getMe();
+                if (user && user.ok) {
+                    updateNav();
+                } else {
+                    updateNav();
+                }
+            })();
+        });
+    </script>
+
     <style>
         body {
             font-family: 'Poppins', sans-serif;
@@ -505,15 +552,15 @@
 
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
-                <a href="register" class="auth-btn register-btn">Register</a>
                 <a href="login" class="auth-btn login-btn">Login</a>
+                <a href="logout" class="auth-btn logout-btn" style="display: none;">Logout</a>
             </div>
         </div>
 
         <!-- Auth links for desktop view -->
         <div class="desktop-auth-links">
-            <a href="register" class="auth-btn register-btn">Register</a>
             <a href="login" class="auth-btn login-btn">Login</a>
+            <a href="logout" class="auth-btn logout-btn" style="display: none;">Logout</a>
         </div>
     </nav>
 
