--- a/login.html
+++ b/login.html
@@ -605,6 +605,17 @@
             box-shadow: 0 6px 15px rgba(27, 94, 32, 0.4);
         }
 
+        .logout-btn {
+            background: linear-gradient(45deg, #d32f2f, #f44336);
+            border-color: #b71c1c;
+        }
+
+        .logout-btn:hover {
+            background: linear-gradient(45deg, #f44336, #d32f2f);
+            border-color: #c62828;
+            box-shadow: 0 6px 15px rgba(211, 47, 47, 0.4);
+        }
+
         /* Keyframe animations for menu */
         @keyframes slideInMenuItem {
             from {
@@ -741,15 +752,15 @@
 
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
-                <a href="register" class="auth-btn register-btn">Register</a>
                 <a href="login" class="auth-btn login-btn">Login</a>
+                <a href="logout" class="auth-btn logout-btn" style="display: none;">Logout</a>
             </div>
         </div>
 
         <!-- Auth links for desktop view -->
         <div class="desktop-auth-links">
-            <a href="register" class="auth-btn register-btn">Register</a>
             <a href="login" class="auth-btn login-btn">Login</a>
+            <a href="logout" class="auth-btn logout-btn" style="display: none;">Logout</a>
         </div>
     </nav>
 
