--- a/index.html
+++ b/index.html
@@ -542,14 +542,12 @@
             
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
-                <a href="register" class="auth-btn register-btn">Register</a>
                 <a href="login" class="auth-btn login-btn">Login</a>
             </div>
         </div>
         
         <!-- Auth links for desktop view -->
         <div class="desktop-auth-links">
-            <a href="register" class="auth-btn register-btn">Register</a>
             <a href="login" class="auth-btn login-btn">Login</a>
         </div>
     </nav>
@@ -563,7 +561,7 @@
                     The ultimate Minecraft server experience where adventure and creativity collide. Join our vibrant community, explore unique gamemodes, and create memories that last a lifetime.
                 </p>
                 <div class="hero-buttons">
-                    <a href="register" class="btn btn-primary hero-btn">Join Now</a>
+                    <a href="login" class="btn btn-primary hero-btn">Join Now</a>
                     <a href="about" class="btn btn-secondary hero-btn">Learn More</a>
                 </div>
             </div>
