--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             function updateNav() {
                 const token = localStorage.getItem('ds_token');
                 const loginBtns = document.querySelectorAll('.auth-btn.login-btn');
-                const registerBtns = document.querySelectorAll('.auth-btn.register-btn');
+                const logoutBtns = document.querySelectorAll('.auth-btn.logout-btn');
                 if (token) {
                     loginBtns.forEach(btn => btn.style.display = 'none');
-                    registerBtns.forEach(btn => btn.style.display = 'none');
+                    logoutBtns.forEach(btn => btn.style.display = 'inline-block');
                 } else {
                     loginBtns.forEach(btn => btn.style.display = 'inline-block');
-                    registerBtns.forEach(btn => btn.style.display = 'inline-block');
+                    logoutBtns.forEach(btn => btn.style.display = 'none');
                 }
             }
 
@@ -543,12 +543,14 @@
             <!-- Auth links inside mobile menu -->
             <div class="mobile-auth-links">
                 <a href="login" class="auth-btn login-btn">Login</a>
+                <a href="logout" class="auth-btn logout-btn">Logout</a>
             </div>
         </div>
         
         <!-- Auth links for desktop view -->
         <div class="desktop-auth-links">
             <a href="login" class="auth-btn login-btn">Login</a>
+            <a href="logout" class="auth-btn logout-btn">Logout</a>
         </div>
     </nav>
 
